Added checking api headers

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -16,5 +16,11 @@ services:
     App\:
         resource: '../src/'
 
+    App\EventSubscriber\ApiAuthSubscriber:
+        arguments:
+            $apiKey: '%env(API_SECRET_KEY)%'
+        tags:
+            - { name: kernel.event_subscriber }
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
